cicd: github action, front-end 로 체인지 디렉토리 후 unit test 진행

--- a/.github/workflows/android-feature.yml
+++ b/.github/workflows/android-feature.yml
@@ -27,5 +27,7 @@ jobs:
               uses: actions/setup-java@v1
               with:
                 java-version: 1.8
+            - name: Change directory
+              run: cd front-end/Android
             - name: Unit tests
               run: bash ./gradlew test --stacktrace
