--- a/.github/workflows/android-feature.yml
+++ b/.github/workflows/android-feature.yml
@@ -26,8 +26,8 @@ jobs:
             - name: set up JDK 1.8
               uses: actions/setup-java@v1
               with:
-                java-version: 1.8
-            - name: Change directory
-              run: cd front-end/Android
+                java-version: 1.8 
             - name: Unit tests
-              run: bash ./gradlew test --stacktrace
+              run: |
+                cd front-end/Android
+                bash ./gradlew test --stacktrace
