--- a/.github/workflows/android-feature.yml
+++ b/.github/workflows/android-feature.yml
@@ -5,10 +5,13 @@ name: Android CI
 # master, release/* 브랜치 이외를 제외하고 CI를 시작
 on:
     push:
-        branches:
-            - '*'
-            - '!master'
-            - '!release*'
+      branches:
+        - 'feature/cicd'
+        - '!master'
+        - '!release*'
+      pull_request:
+        - develop
+        - master
 
 # 작업 정의
 jobs:
@@ -23,6 +26,8 @@ jobs:
             - name: set up JDK 1.8
               uses: actions/setup-java@v1
               with:
-                java-version: 1.8
+                java-version: 1.8 
             - name: Unit tests
-              run: bash ./gradlew test --stacktrace
+              run: |
+                cd front-end/Android
+                bash ./gradlew test --stacktrace
