--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.dnd.kindit"
-        minSdkVersion 16
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -27,7 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //머티리얼 디자인 라이브러리 추가
@@ -36,4 +36,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Kakao API, 일단 다 포함 시켜 놓고 나중에 빼자
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
+
+    // 통신을 위한 Retrofit 라이브러리
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.13"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
