Accounts API 구현

--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -12,6 +12,7 @@ requests = "==2.24.0"
 drf-yasg = "*"
 django-rest-knox = "*"
 django-rest-auth = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.7"
