--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -13,6 +13,7 @@ drf-yasg = "*"
 django-rest-knox = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.7"
