--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -28,10 +28,11 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     //머티리얼 디자인 라이브러리 추가
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -42,5 +43,6 @@ dependencies {
     // 통신을 위한 Retrofit 라이브러리
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation "io.reactivex.rxjava2:rxjava:2.2.13"
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.google.code.gson:gson:2.8.6'
 }
