--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.account.KindItLoginActivity"></activity>
+        <activity android:name=".view.account.SignUpActivity" />
         <activity android:name=".view.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +26,8 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
 
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".view.LoginActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".view.account.LoginActivity" />
     </application>
 
 </manifest>
