--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation "io.reactivex.rxjava2:rxjava:2.2.13"
     implementation 'com.google.code.gson:gson:2.8.6'
+    // 인디케이터
+    implementation 'me.relex:circleindicator:2.1.4'
 }
