--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -14,6 +14,8 @@ django-rest-knox = "*"
 django-rest-auth = "*"
 django-allauth = "*"
 djangorestframework-jwt = "*"
+bcrypt = "*"
+pytz = "*"
 
 [requires]
 python_version = "3.7"
