[FEATURE] MenuApp 생성, 연결, DB 모델링

--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -16,6 +16,8 @@ django-allauth = "*"
 djangorestframework-jwt = "*"
 bcrypt = "*"
 pytz = "*"
+pillow = "*"
+django-taggit = "*"
 
 [requires]
 python_version = "3.7"
