--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,20 +1,32 @@
 asgiref==3.2.10
+bcrypt==3.2.0
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==3.0
+defusedxml==0.6.0
 Django==3.0.2
+django-taggit==1.3.0
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 drf-yasg==1.17.1
 idna==2.10
 inflection==0.5.0
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+oauthlib==3.1.0
 packaging==20.4
+Pillow==7.2.0
+pycparser==2.20
+PyJWT==1.7.1
 pyparsing==2.4.7
+python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
+requests-oauthlib==1.3.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 six==1.15.0
