--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".view.account.KindItLoginActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".view.account.FindPasswordActivity"></activity>
+        <activity android:name=".view.account.KindItLoginActivity" />
         <activity android:name=".view.account.SignUpActivity" />
         <activity android:name=".view.LauncherActivity">
             <intent-filter>
