--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -29,7 +32,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
 
     //머티리얼 디자인 라이브러리 추가
     implementation 'com.google.android.material:material:1.2.0'
