--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.account.FindPasswordActivity"></activity>
+        <activity android:name=".arch.view.FavoriteInitTagActivity"></activity>
+        <activity android:name=".view.account.FindPasswordActivity" />
         <activity android:name=".view.account.KindItLoginActivity" />
         <activity android:name=".view.account.SignUpActivity" />
         <activity android:name=".view.LauncherActivity">
