feature: 사용자 프로필 수정 중 - viewmodel 적용

--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".arch.view.FavoriteInitTagActivity"></activity>
+        <activity android:name=".arch.view.ProfileActivity"></activity>
+        <activity android:name=".arch.view.FavoriteInitTagActivity" />
         <activity android:name=".view.account.FindPasswordActivity" />
         <activity android:name=".view.account.KindItLoginActivity" />
         <activity android:name=".view.account.SignUpActivity" />
@@ -24,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
