--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     //이미지 둥글게
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
+    // Glide 이미지 처리 관련 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
 }
