--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -9,6 +9,7 @@ cryptography==3.0
 defusedxml==0.6.0
 Django==3.0.2
 django-taggit==1.3.0
+django-taggit-serializer==0.1.7
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 drf-yasg==1.17.1
