--- a/front-end/Android/app/build.gradle
+++ b/front-end/Android/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     //이미지 둥글게
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
 }
