--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 
         <activity android:name=".MainActivity" />
         <activity android:name=".view.account.LoginActivity" />
+        <activity android:name=".view.myself.MyselfMenuActivity" />
+        <activity android:name=".view.myself.MyselfUploadActivity" />
     </application>
 
 </manifest>
