--- a/front-end/Android/app/src/main/AndroidManifest.xml
+++ b/front-end/Android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".util.GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".arch.view.CommunityDetailActivity"></activity>
+        <activity android:name=".arch.view.CommunityDetailActivity" />
         <activity android:name=".view.community.CommunityWriteActivity" />
         <activity android:name=".arch.view.CustomDetailsActivity" />
         <activity android:name=".arch.view.ProfileActivity" />
